Issue #SB-23493 feat: Updated pom to include jacoco results for service